--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
            
        <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">MENÚ </a>
+          <a class="navbar-brand" href="#">MENÚu </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
