--- a/descripcion.html
+++ b/descripcion.html
@@ -7,7 +7,7 @@
     <meta name="description" content="información de the last of us, historias, enlaces a guias ">
     <meta name="keywords" content="the last of us, guía, historia, left behind, ps3, ps4, ps5, hbo">
    <link rel="stylesheet" href="css/estilodescripcion.css">
-   <link rel="shortcut icon" href="img/The last of us1.jpg" type="image/x-icon"> 
+   <link rel="shortcut icon" href="img/luciernagaicono.jpg" type="image/x-icon">  
     
    <title>HISTORIA-THE LAST OF THE TWO</title>
 
