--- a/listadeperso.html
+++ b/listadeperso.html
@@ -7,7 +7,7 @@
     <meta name="description" content="información de the last of us, historias, personajes, enlaces a guias ">
     <meta name="keywords" content="the last of us, guía, historia, personajes, left behind, ps3, ps4, ps5, hbo">
     <link rel="stylesheet" href="css/estilolistap.css">
-    <link rel="shortcut icon" href="img/The last of us1.jpg" type="image/x-icon"> 
+    <link rel="shortcut icon" href="img/luciernagaicono.jpg" type="image/x-icon">  
     <title>PERSONAJES-THE LAST OF THE TWO</title>
  <!-- CSS only -->
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
